# Data-Project-Starter-Kit

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/pipeline/: __init__.py  contrato.py  extract.py  load.py  pipeline.py  transform.py
data/input/: absenteeism_data_0.xlsx
data/output/: consolidated_absenteeism_data.xlsx
docs/: api.md  index.md
tests/: test_integration.py  test_unitarios.py
