[tool.poetry]
name = "meu projeto de etl"
version = "0.1.0"
description = "Projeto ETL para Excel"
authors = ["Thiago Silva Farias <thiago_protect@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.4"
pytest = "^8.2.2"
isort = "^5.13.2"
blue = "^0.9.1"
taskipy = "^1.13.0"
mkdocs = "^1.6.0"
pip-audit = "^2.7.3"
mkdocstrings-python = "^1.10.3"
pygments = "^2.18.0"
mkdocs-material = "^9.5.27"
pymdown-extensions = "^10.8.1"
pre-commit = "^3.7.1"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy]
[tool.taskipy.tasks]
format = "poetry run isort . && poetry run blue ."
test = "poetry run pytest -v"
kill = "kill -9 $(lsof -t -i :8000)"
run = """
python app/main.py
"""
doc = "mkdocs serve"
